--- a/assets/scss/modules/_main.scss
+++ b/assets/scss/modules/_main.scss
@@ -1,6 +1,6 @@
 body:not(.home) {
-	#content {
-		//padding-top: 3rem;
+	main#main {
+		padding-top: 7rem;
 	}
 }
 
