--- a/assets/scss/templates/_page.scss
+++ b/assets/scss/templates/_page.scss
@@ -4,8 +4,8 @@
 	text-align: center;
 	position: relative;
 	overflow: hidden;
-	margin: 1em 0 0 0;
-	padding-top: 3rem;
+	margin: 3rem 0;
+	//padding-top: 3rem;
 	line-height: 1.2;
 	font-size: 4em;
 	letter-spacing: -1px;
